@@ -1,5 +1,9 @@
 2021-02-19  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/shell/Shell.java:
+	Delay starting the JShell instance until need to add classpath to
+	be updated.  In bootstrap.jsh, explicitly link parent ClassLoader.
+
 	* src/main/java/galyleo/server/Server.java:
 	Shutdown immediately without waiting to send shutdown_reply.
 
